--- a/login.html
+++ b/login.html
@@ -8,13 +8,14 @@
 			width: 100px;
 			height: 100px;
 			background-color: red;
+			margin-bottom: 20px;
 		}
 	</style>
 </head>
 <body>
 <div>
-	
 </div>
+<div></div>
 	
 </body>
 </html>
